<?xml version="1.0"?>
<package format="2">
  <name>pc2_coppeliasim</name>
  <version>0.0.0</version>
  <description>The float32multiarray_to_pointcloud2 package</description>

  <maintainer email="davide.nardi-1@studenti.unitn.it">Davide Nardi</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
